finish web version

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style-main.css">
     <link rel="stylesheet" href="css.style-footer.css">
     <link rel="stylesheet" href="css/reset.css">
+    <script src="js/sub-menu-data.js" defer></script>
     <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -18,7 +19,7 @@
             <div class="loading-bar"></div>
         </div>
     </div>
-    <header class="header-wrapper global-width">
+    <header class="header-wrapper">
         <div class="header-container">
             <div class="logo-img-container">
                 <a href="#">
@@ -70,8 +71,16 @@
                 </div>
             </div>
         </div>
-        <div class="header-img-wrapper">
-            <div class="header-img-container">
+
+        <div class="header-sub-menu">
+            <div class="header-sub-menu-container"> 
+            </div>
+        </div>
+
+        <div class="modal"></div>
+
+        <div class="header-img-wrapper global-width">
+            <div class="header-img-container observe-ready">
                 <div class="header-img">
                     <img src="./img/header-img-01.jpg" alt="">
                 </div>
@@ -79,9 +88,9 @@
                     <img src="./img/header-img-02.jpg" alt=""> 
                 </div>
             </div>
-            <div class="header-img-desc-wrapper">
-                <p class="img-name">Just For Everyone</p>
-                <h1 class="img-title">Nike, For Everyone</h1>
+            <div class="header-img-desc-wrapper observe-ready">
+                <p class="img-name ">Just For Everyone</p>
+                <h1 class="img-title ">Nike, For Everyone</h1>
                 <p class="img-desc">Nike for children, adults, and everyone.</p>
                 <button class="purchase-btn">
                     <a href="#">buy</a>
@@ -92,7 +101,7 @@
     <main class="item-introduce global-width">
         <section class="item-section">
             <article class="first-section">
-                <div class="first-section-img-wrapper">
+                <div class="first-section-img-wrapper observe-ready">
                     <h1 class="first-section-title">
                         Weekly-Styling
                     </h1>
@@ -123,7 +132,7 @@
                        </div>
                     </div>
                 </div>
-                <div class="first-section-desc-wrapper">
+                <div class="first-section-desc-wrapper observe-ready">
                     <div class="first-section-desc-container">
                         <h1 class="first-section-desc-title">Sensuous Styling</h1>
                         <p class="first-section-desc-para">Experience Nike's eye-catching style.</p>
@@ -139,7 +148,7 @@
                 </div>
             </article>
             <article class="second-section">
-                <div class="second-section-img-wrapper">
+                <div class="second-section-img-wrapper observe-ready">
                     <div class="second-section-img-container">
                        <div class="second-section-img-bg">
                            <img src="./img/second-section-img-01.jpg" alt="wearing-nike-cloth" class="first-section-img">
@@ -149,7 +158,7 @@
                        </div>
                     </div>
                 </div>
-                <div class="second-section-desc-wrapper">
+                <div class="second-section-desc-wrapper observe-ready">
                     <div class="second-section-desc-container">
                         <h1 class="second-section-desc-title">Freedom and Stylish</h1>
                         <p class="second-section-desc-para">Meet Nike, which is released with free movement and sophisticated style.</p>
@@ -165,14 +174,14 @@
                 </div>
             </article>
             <article class="third-section">
-                <div class="third-section-img-wrapper">
+                <div class="third-section-img-wrapper observe-ready">
                     <div class="third-section-img-container">
                        <div class="third-section-img-bg">
                            <img src="./img/third-section-img-01.jpg" alt="wearing-nike-cloth" class="first-section-img">
                        </div>
                     </div>
                 </div>
-                <div class="third-section-desc-wrapper">
+                <div class="third-section-desc-wrapper observe-ready">
                     <div class="third-section-desc-container">
                         <h1 class="third-section-desc-title">Bold Design</h1>
                         <p class="third-section-desc-para">My own look with a bold design.</p>
@@ -186,12 +195,12 @@
             </article>
         </section>
         <section class="shoes-section">
-            <div class="shoes-section-title-container">
+            <div class="shoes-section-title-container observe-ready">
                 <h2 class="shoes-section-title">
                     Featured Shoes
                 </h2>
             </div>
-            <div class="shoes-items">
+            <div class="shoes-items observe-ready">
                 <article class="shoes-item-container">
                     <a href="#">
                         <div class="shoes-item-img-container">
@@ -267,13 +276,13 @@
             </div>
         </section>
         <section class="cloth-section">
-            <div class="cloth-section-title-container">
+            <div class="cloth-section-title-container observe-ready">
                 <h2 class="cloth-section-title">
                     Apparel Essentails
                 </h2>
             </div>
-            <div class="cloth-item">
-                <article class="cloth-item-container">
+            <div class="cloth-item observe-ready">
+                <article class="cloth-item-container ">
                     <a href="#">
                         <div class="cloth-item-img-container">
                             <img src="./img/cloth-item-01.jpg" alt="cloth-item">
