--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <script src="js/sub-menu-data.js" defer></script>
     <script src="js/main.js" defer></script>
 </head>
-<body>
+<body class="active">
     <div class="load-page">
         <div class="loading-bar-container">
             <div class="loading-bar"></div>
         </div>
     </div>
+    <div class="modal-mobile"></div>
     <header class="header-wrapper">
-        <div class="header-container">
+        <div class="header-container global-width">
             <div class="logo-img-container">
                 <a href="#">
                     <img src="./img/pngwing.com.png" alt="logo-img">
@@ -68,6 +69,11 @@
                             <i class="fas fa-shopping-cart"></i>
                         </a>
                     </button>
+                    <button class="shopping-list-icon" id="mobile-sub-menu">
+                        <a href="#">
+                            <i class="fas fa-bars"></i>
+                        </a>
+                    </button>
                 </div>
             </div>
         </div>
@@ -77,9 +83,78 @@
             </div>
         </div>
 
-        <div class="modal"></div>
+        <div class="header-sub-menu-mobile">
+            <div class="header-sub-menu-mobile-wrapper">
+                <ul class="header-sub-menu-mobile-nav">
+                    <li>
+                        <a href="">
+                            <p>New Releases</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Men</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Women</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Kids</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>SALE</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>SNKRS</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Brand</p>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="header-sub-menu-mobile-login">
+                    <li class="purchase-btn"> 
+                        <a href="#">Join the Membership</a>
+                    </li>
+                    <li class="purchase-btn">
+                        <a href="#">Log-in</a>
+                    </li>
+                </ul>
+                <ul class="header-sub-menu-mobile-service">
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-shopping-bag"></i>
+                            <p>Shoping List</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-box"></i>
+                            <p>Order Delivery</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-question-circle"></i>
+                            <p>Service Center</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
         <div class="header-img-wrapper global-width">
+            <div class="modal"></div>
             <div class="header-img-container observe-ready">
                 <div class="header-img">
                     <img src="./img/header-img-01.jpg" alt="">
