--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/fb0eb4f320.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style-header.css">
     <link rel="stylesheet" href="css/style-main.css">
-    <link rel="stylesheet" href="css.style-footer.css">
+    <link rel="stylesheet" href="css/style-footer.css">
     <link rel="stylesheet" href="css/reset.css">
     <script src="js/sub-menu-data.js" defer></script>
     <script src="js/main.js" defer></script>
